# langgraph_project_template

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
docker/: Dockerfile  Dockerfile.dev
scripts/: run_api.py  run_cli.py
src/: __init__.py  api.py  main.py
src/config/: __init__.py  settings.py
src/graphs/: __init__.py  rag_graph.py
src/models/: __init__.py  llm.py  state.py
src/nodes/: __init__.py  base_node.py
src/prompts/: __init__.py  system_prompts.py
src/tools/: __init__.py  web_search.py
src/utils/: __init__.py  logger.py
tests/: test_api.py  test_graph.py
