[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langgraph-workflow"
version = "0.1.0"
description = "基于 LangGraph 的生产级 AI 工作流项目"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "langchain-core==1.4.9",
    "langchain-openai==1.3.5",
    "langgraph==1.2.9",
    "python-dotenv==1.2.2",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "openai==1.66.0",
    "httpx==0.28.1",
    "tiktoken==0.13.0",
    "PyYAML==6.0.3",
    "tenacity==9.1.4",
    "xxhash==3.8.1",
    "langgraph-sdk==0.2.37",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "black>=24.0",
    "ruff>=0.4.0",
    "mypy>=1.9",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
